finished mouse over functionality, added z-index fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,7 +70,7 @@ header {
     align-self: start;
     position: sticky;
     overflow: visible;
-    z-index: 1;
+    z-index: 3;
 }
 header > .content {
     height: inherit;
